--- a/risk_assmt/risk_exe_antonp.Rmd
+++ b/risk_assmt/risk_exe_antonp.Rmd
@@ -21,13 +21,9 @@ The purpose of this vignette is to explore relationship of risk with other facto
 
 ### Key takeaways
 
-- Risk is somewhat related to the region in which a project is being implemented. However, there are other, stronger predictors of overall risk rating, such as: the tenure of the project's TTL (experienced ones are more likely to be trusted with high-risk projects), the scale of the project (as represented by the amounts committed), and the year when projects were approved (as a proxy of world events, changes in the Bank's risk tolerance, etc.)
+- Risk is somewhat related to the region in which a project is implemented. However, each region contributes to the overall risk in a different way. Some do not follow a distinct trend. Others are more likely to involve high-risk projects (Africa), or moderate risk (Europe and Central Asia). We explore this in detail.
 
-- The strongest relationship was found to be in East Asia Pacific and macroeconomic and political risks. In these countries such risks are expected to be lower, as the correlations are negative at `-0.23` and `-0.27`. The visualizations are to be found in the analysis below.
-
-- Overall risk rating is not a linear function of other specific types of risk. Institutional capacity is a type of risk that contributes the most to the overall risk rating accoding to two disticnt measures.
-
-- Fragility and conflict indicator is negatively related to the net value of the World Bank loans. It is hard to provide loans if it is uncertain whether the loanees will be in place once a situation is resolved.
+- There are other, stronger predictors of overall risk rating, such as: the tenure of the project's TTL (experienced ones are more likely to be trusted with high-risk projects), the scale of the project (as represented by the amounts committed), and the year when projects were approved (as a proxy of world events, changes in the Bank's risk tolerance, etc.)
 
 ## Preparation of the dataset
 
@@ -50,6 +46,9 @@ library(plotly)
 library(reshape2)
 library(alluvial)
 library(caret)
+library(corrplot)
+library(vcd)
+library(graphics)
 ```
 
 ```{r, message=FALSE, echo=FALSE}
@@ -67,9 +66,11 @@ The provided datasets — `project_data` and `risk_data` — come in wide and lo
 
 We bring these datasets together in a tidy format, where each column is a variable, and each row is a unique observation. In this case, the unique identifier is `project_id`.
 
+
+We also create a numeric representation of risk as `risk_numeric` to facilitate computation in R. The risk can be Low (1), Moderate (2), Substantial (3), or High (4).
+
 ```{r}
-# Creating a numeric representation of risk as `risk_numeric` to facilitate computation in R.
-# This can be Low (1), Moderate (2), Substantial (3), or High (4)
+# Encoding risk
 risk_data <- risk_data %>% 
   mutate(risk_rating = 
   ifelse(risk_rating==c("L"),1,
@@ -102,22 +103,26 @@ joined_data <- project_data %>%
 ## Part 1. Risk and Regions
 ### Interactive Map for Exploratory Data Analysis
 
-<iframe src="https://public.tableau.com/profile/anton#!/vizhome/RiskMapping/RiskMap?:showVizHome=no&amp;:embed=true"
- width="900" height="600"></iframe>
+<iframe src="https://public.tableau.com/profile/anton#!/vizhome/RiskMapping/RiskMap?:showVizHome=no&amp;:embed=true" 
+width="900" height="600"></iframe>
+
+The main purpose of this tool is to allow quick summarization for a particular type of risk, or all of them, and time period. 
+
+It allows you to slice, aggregate, and visualize data in real time.
 
 ### Distribution of Risk
 
 ---
 
-Disclaimer: The below analysis was performed on the entire universe of the data. Such risks as political, governance, and macro, may change momentarily once there is new administration in place. Therefore, the produced insights should be treated as generalizations from historical data.
+Assumption 1: The below analysis was performed on the entire universe of the data. Such risks as political, governance, and macro, may change momentarily once there is new administration in place. Therefore, the produced insights should be treated as generalizations from historical data.
+
+Assumption 2: All risk evaluations are performed by staff, subjectively. `Overall` risk category is a qualitative assessment of the risk, which is not a linear function of other types of risk.   
+
+Assumption 3: When making a decision on a project, `Overall` risk is the key factor. We primarily focus on this type of risk in this vignette. The relationship of region with subcategories of risk are presented in the correlation matrix. 
 
 ---
 
-Upon completing exploratory data analysis, we conclude that it will be optimal to produce an alluvial plot to visualize the many relationships between overall risk and regions.
-
-> Assumption 1: All risk evaluations are performed by staff, subjectively. `Overall` risk category is a qualitative assessment of the risk, which may or may not be a disctinct function of other types of risk.   
-
-> Assumption 2: When making a decision on a project, `Overall` risk is the key factor. We will focus on it first, proceeding to study subcategories of risk later.
+We start with an alluvial plot to visualize the many relationships between overall risk and regions.
 
 ```{r}
 # Prepare data for visualization 
@@ -137,23 +142,69 @@ alluvial(joined_data_freq[,1:4],
              ifelse(joined_data_freq$risk_overall == "2", "cyan", "blue"))))
 ```
 
-TODO legend
+The above figure shows -- in color -- how different levels of risk are distributed across regions (including those facing fragile, conflict, or emergency situations). These situations have been chosen to accompany regions because they are intrinsically related to specific geographies.
 
-The above figure shows in color how different levels of risk are distributed across regions. Including those facing fragile, conflict, or emergency situations. These situations have been chosen to accompany regions because they are intrinsically related to specific geographies.
+It can be seen that:
 
-While it presents lot of information in a compact format, staff familiar with the dataset will be able to read it easily. For instance, it can be seen that:
-
--  A little over 50% of projects have a `Substantial (3)` risk rating. The second most frequent rating is `Moderate`. This shows most risk assessors refrain from making *extreme* judgements.   
--  Therefore, it is not surprising that `Substantial (3)` and `High (4)` risk projects span across the regions in a way close to a normal distribution. Percentage breakdown of overall risk by region can be found below. 
+-  A little over 50% of projects have a `Substantial (3)` risk rating. The second most frequent rating is `Moderate`. This shows most risk assessors refrain from making extreme judgements.   
+-  Therefore, it is not surprising that `Substantial (3)` and `High (4)` risk projects span across the regions in a way close to a normal distribution. Percentage breakdown of overall risk by region can be found below.
 -  Africa is the biggest region where projects are implemented. It can be seen that over 2/3 of the projects there are of a `Substantial (3)` or `High (4)` risk.
 
-![Risk by Region](/Users/MacBookAir/Desktop/GoogleDrive/DATA/git/wbg-projects/risk_assmt/percent_table.jpg)# TODO fix the table 
+![](/Users/MacBookAir/Desktop/GoogleDrive/DATA/git/wbg-projects/risk_assmt/percent_table.jpg)
 
 The takeaway of this table is that proportions of projects of each risk category are approximately the same across all regions. This is a piece of evidence showing that risk is not substantially or exclusively related to the region in which a project is being implemented.
 
-### Correlates of Risk
+Let's see if we can prove it statistically.
 
-To better our understand of the relationship between risk and region we will look for more patterns inside the data.
+### Contingency Analysis 
+
+In this segment we utilize Chi-Squared test of independence. It can be applied to a frequency table formed by categorical variables: `risk_overall` and `region` in this case. 
+
+```{r}
+conting_risk_reg <- table(joined_data$region, joined_data$risk_overall)
+conting_risk_reg
+
+chisq_test_risk_reg <- chisq.test(conting_risk_reg)
+chisq_test_risk_reg
+```
+
+With `p-value < 0.05` we reject the null hypothesis of the test. Therefore, we are able to say that there is a (statistically) significant associtation between the categories of `region` and level of risk. In other words, region and risk are not independent, but somewhat associated.
+
+```{r}
+mosaicplot(conting_risk_reg, shade = TRUE,  
+           las=2, cex.axis = 1,
+           main = "Mosaic Plot of Risk-Region Relationship")
+```
+
+The colors represent the level of contribution to the relationship between variables. Specifically, **blue** means there are more observations in that box than would be seen in a random distribution under the null hypothesis of the above Chi-Square test for independence. **Red** means there are fewer observations than would be expected. The red and blue boxes are the reason null hypothesis of the chi-squared is rejected.
+
+### Conclusion
+
+Our results show that:
+
+- Africa is strongly associated with high level of risk, and is much less frequently hosting moderate risk projects.
+
+- Europe and Central Asia is the most likely to have moderate risk projects, and is unlikely to host substantial or high level risk projects.
+
+- Latin America and Caribbean projects are more about the extremes: they have tendency to be a place for either moderate or high risk projects.
+
+- Middle East and North Africa is a place where high risk projects are more likely.
+
+- East Asia and Pacific, South Asia, and other regions do not have strong associations with a particular level of risk.
+
+
+
+
+---
+
+
+
+
+## Part 2. Correlates of Risk
+
+### Correlation Matrix
+
+To better our understand of the relationship between risk and other variables we will look for more patterns inside the data.
 
 Let's create a correlation matrix that will help us understand which variables are similar based on how the underlying data varies.
 
@@ -196,16 +247,17 @@ plot_ly(x = var_corrs$pair.name.x,
         autosize = F, width = 800, height = 400)
 ```
 
-There are very few strong positive correlations in the above plot. The strongest of them are including an indicator of a project being in a fragile or conflict situation.
+**Speaking of regions and subcategories of risk, the strongest relationships are:** 
 
-- The `0.25` correlation between `fcs_indicator` and `risk_overall` shows that fragile locationas are somewhat associated with higher risk. While the relationship is positive and exists, it is weak.
+- **The `0.25` correlation between Africa region and political and governance risk hints at instability in the region.**
 
-- The `0.25` correlation between African and Political and Governance risk hints at instability in the region, especially relative to the `-0.28` political risk in East Asia Pacific. Similar situation is observed for macroeconomic risk in these regions. **These are the strongest relationships between risk and region.**
+- **This seems especially true relative to the `-0.28` political risk in East Asia and Pacific.**
 
-- Other regions do now show as strong of a relationship with different types of risk.
+- **Similar situation is observed for macroeconomic risk in these regions.**
 
-We also observe few strongly negative correlations:
-  
+- **Other regions do now show as strong of a relationship with different types of risk. This is in line with our observations from Part 1.**
+
+A handful of other insights can be extracted from this plot: 
 - The `-0.29` correlation between `fcs_indicator` and `net_commit_amt`, net value of the World Bank loans. It is hard to provide loans if it is uncertain whether the loanees will be in place once a situation is resolved.   
 
 - The `-0.95` correlation between `approval_fy` and `risk_rating_sequence` is trivial: there is less chance to assess the projects later in the lifycycle for the more recent ones.
@@ -271,14 +323,14 @@ ggplotly(p, tooltip=c("y"))
 ```
 According to the plot above, the most important features in this dataset to predict risk are divided in two clusters:
 
-High importance:
+Higher importance:
 
 -	tl_since: Date the current project manager came on to the project
 -	net_commit_amt: Value of the World Bank loan(s) associated with the project in millions of USD.
-
-Low importance:
-
 - approval_fy: Fiscal Year when the project was approved
+
+Lower importance:
+
 - grant: Value of any World Bank grants associated with the project in millions of USD.
 -	fcs_indicator: Indicates if the project is in a Fragile or Conflict Situation.
 - certain regions, countries, practices, etc.
@@ -287,90 +339,32 @@ Low importance:
 Variable importance stands for gain, the improvement in accuracy brought by a variable to the forest tree branches it is located on. The idea is that before adding a new split on a variable X to the branch there were some wrongly classified elements. After adding the split on this feature, there appear two new branches. Each of these branches is more accurate now.
 ---
 
-To answer our question, some regions are better predictors of risk than others. The modelling exercise confirms the above considerations that East Asia Pacific (EAP) is a stronger predictor that some other regions. However, a new piece of information is that ECA is also noticeable. All of them, still, are in the low importance cluster.
+This again supports our previous findings, showing that some regions are better predictors of risk than others. For example, the modelling exercise confirms the above considerations that East Asia Pacific is a stronger predictor that some other regions. However, a new piece of information is that Europe and Central Asia is also noticeable.
+
+There are many interesting attributes to explore. The tenure of the project’s TTL, the scale of the project, etc. But we will focus on one for now. Let it be `approval_fy`. It is interesting to know what the dynamics of project risk have been in the past years.
+
+Once again, to be statistically rigorous, we employ Chi-Square test for independence.
 
 ```{r}
+conting_risk_reg2 <- table(joined_data$approval_fy, joined_data$risk_overall)
 
+assoc(conting_risk_reg2, shade=TRUE, legend = TRUE, compress = TRUE,
+      rot_varnames = 0, rot_labels = 0,
+      xlab="Year", offset_labels = c(1,1,1,1))
 ```
 
-## Part 2. Types of Risk 
+The `p-value` is near zero, thus there *is* a relationship between year and overall risk.
 
-In Part 1 we focused on the overall risk measure and its relation to region. We are tasked with exploring the association of risk and other measures. However, this has already been covered in the visualizations and analyses in Part 1. The results are valuable, yet there is an even more insightful discovery below.
+### Conclusion
 
-For this section, we have prepared an analysis of how different types of risk influence the measure of overall risk. Thus, we use only types of risks to preduct the overall risk rating. This cannot be used in applied environments, because it presents a data leakage. In this case it is intentinal -- to show that contribution of different types of risk is not even.
+Our results based on the data show that:
 
-```{r, echo=FALSE,results='hide',message=FALSE}
-m_xgb <- joined_data %>%
-  select(-tl, -project_id, -net_commit_amt, -tl_since, -approval_fy, -grant, -region, -country, -practice, -proj_emrg_recvry_flg, -fcs_indicator, -prod_line, -project_track) %>%
-  build_model(
-    model_func = xgboost_multi, 
-    formula = risk_overall ~ . , 
-    booster = "gbtree", 
-    eval_metric = "mlogloss", 
-    watchlist_rate = 0.05, gamma = 0, max_depth = 6, 
-    min_child_weight = 1, subsample = 1, colsample_bytree = 1, 
-    learning_rate = 0.3, early_stopping_rounds = 50, nrounds = 500, 
-    test_rate = 0.3, seed = 1337)
-m_xgb_coef <- m_xgb %>% model_coef()
-m_xgb_prediction <- m_xgb %>% prediction(data = "test")
-```
+- Years 2005 and 2007 were marked with increased attention to high risk projects. 
 
-```{r, echo=FALSE}
-m_xgb_conf <- confusionMatrix(m_xgb_prediction$predicted_label, m_xgb_prediction$risk_overall)
-m_xgb_conf
-```
+- In 2008—2011 World Bank was most likely to participate in moderate and low risk projects. 2009 was marked with low likelihood of taking on high risk projects. This was the aftermath of the global financial crisis of 2007–2008.
 
-```{r, echo=FALSE}
-#m_xgb_coef$importance <- format(m_xgb_coef$importance, scientific=F)
-options("scipen"=100, "digits"=4)
-p <- m_xgb_coef %>% filter(importance>0.00683778) %>% 
-  ggplot(aes(x = reorder(feature, importance), 
-             y = importance,
-             fill = importance)) +
-    coord_flip() +
-    scale_fill_gradient(low = "gray", high = "red", "Variable\nimportance") +
-    geom_bar(stat = "identity") +
-    theme_bw() +
-    xlab("Variable names") +
-    ylab("")
-ggplotly(p, tooltip=c("y"))
-```
+- In 2012—2014 no strong preferences to either level of project risk can be found. 
 
-Here we observe that the #1 contributor to overall risk is institutional capacity.
+- In 2015—2016 World Bank was much more likely to support substantial risk projects than the ones with moderate risk.
 
-```{r, echo=FALSE,results='hide',message=FALSE}
-# Running Spearman correlation analysis
-j_data_corr <- j_data_corr %>% select(risk_overall, risk_environment_and_social, risk_fiduciary, risk_institutional_capacity, risk_macroeconomic, risk_political_and_governance, risk_sector_strategies_and_policies, risk_stakeholders, risk_technical_design, risk_rating_sequence) 
-var_corrs <- j_data_corr %>% 
-  do_cor(which(sapply(., is.numeric)), 
-         use = "pairwise.complete.obs", 
-         method = "spearman", 
-         distinct = FALSE, 
-         diag = TRUE)
-```
-```{r, echo=FALSE,message=FALSE}
-# Plotting
-plot_ly(x = var_corrs$pair.name.x, 
-        y = var_corrs$pair.name.y,
-        z = var_corrs$value, 
-        colorscale = list(c(0, "rgb(255, 0, 0)"), list(1, "rgb(0, 255, 0)")),
-        # colorscale = "Blues",
-        zauto = F,
-        zmin = -1,
-        zmax = 1,
-        type = "heatmap",
-        autosize = F, width = 800, height = 400)
-```
-
-
-We run the correlation analysis again to magnify the relationships between types of risk.
-
-- We indeed see that institutional capacity is the highest correlated risk with regards to overall risk at `0.63` correlation. 
-
-- It is interesting that while fudiciary risk is also rather correlated with overall risk at `0.52` correlation, it is located in the low-value cluster in XGBoost variable importance analysis above.
-
-- According to it, second and third runner-ups are political and stakeholder risks. Among with fudiciary, technical design, environment, sector strategies, and macroeconomics are less important for overall risk.
-
-- It is logical to see a positive association of `0.51` between fudiciary risk and institutional capacity. There is an assocition between in-country trustees and strong institutions, and vise versa.
-
-- Interestingly, environment risks have near-zero association with macroeconomic threats. One would expect that macro activity would threaten the environment due to means used to support it not eco-friendly for the most part.
+End of analysis.
